cmake_minimum_required(VERSION 3.0)

project(serena)

# library for traffic pattern
set(serena_hdr
        "serena.hpp")
set(serena_src
        )

#add_library(serena
 #       "${serena_hdr}"
  #      "${serena_src}")
#if (WIN32)
#    else()
#add_dependencies(traffic_pattern
#        json )
#endif()
#list(APPEND saber_libraries serena)





